@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-08-17T01:25:44Z",
-  "count" : 6,
+  "timestamp" : "2024-08-30T01:39:25Z",
+  "count" : 5,
   "count_minmax" : [ 1, 6 ],
-  "count_decinc" : [ -0, +6 ],
-  "uniques" : 6,
+  "count_decinc" : [ -1, +6 ],
+  "uniques" : 5,
   "uniques_minmax" : [ 1, 6 ],
-  "uniques_decinc" : [ -0, +6 ]
+  "uniques_decinc" : [ -1, +6 ]
 }
