@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-08-29T12:40:16Z",
-  "count" : 3,
-  "count_minmax" : [ 3, 3 ],
-  "count_decinc" : [ -0, +3 ],
-  "uniques" : 3,
-  "uniques_minmax" : [ 3, 3 ],
-  "uniques_decinc" : [ -0, +3 ]
+  "timestamp" : "2024-08-30T01:39:25Z",
+  "count" : 4,
+  "count_minmax" : [ 3, 4 ],
+  "count_decinc" : [ -0, +4 ],
+  "uniques" : 4,
+  "uniques_minmax" : [ 3, 4 ],
+  "uniques_decinc" : [ -0, +4 ]
 }
