@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2024-08-29T12:40:16Z",
+  "timestamp" : "2024-08-30T01:39:25Z",
   "count_outdated" : 8231,
   "uniques_outdated" : 3670,
-  "count" : 8268,
-  "uniques" : 3704,
+  "count" : 8269,
+  "uniques" : 3705,
   "clones" : [
     {
       "timestamp": "2024-08-16T00:00:00Z",
-      "count": 6,
+      "count": 5,
       "count_minmax": [ 1, 6 ],
-      "count_decinc": [ 0, 6 ],
-      "uniques": 6,
+      "count_decinc": [ 1, 6 ],
+      "uniques": 5,
       "uniques_minmax": [ 1, 6 ],
-      "uniques_decinc": [ 0, 6 ]
+      "uniques_decinc": [ 1, 6 ]
     },
     {
       "timestamp": "2024-08-17T00:00:00Z",
@@ -97,12 +97,12 @@
     },
     {
       "timestamp": "2024-08-29T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 3,
-      "uniques_minmax": [ 3, 3 ],
-      "uniques_decinc": [ 0, 3 ]
+      "count": 4,
+      "count_minmax": [ 3, 4 ],
+      "count_decinc": [ 0, 4 ],
+      "uniques": 4,
+      "uniques_minmax": [ 3, 4 ],
+      "uniques_decinc": [ 0, 4 ]
     }
   ]
 }
